Enhance liveview client; update Jetty server.